# SDH_Main

./: README.md  sdh_grasp_control (3rd copy).cpp  sdh_grasp_control (4th copy).cpp  sdh_grasp_control (another copy).cpp  sdh_grasp_control (copy).cpp
devel/: .catkin  .rosinstall  setup.sh
devel/include/schunk_sdh/: TactileMatrix.h  TactileSensor.h
devel/include/sdh_grasp/: grasp_info.h  pre_grasp_pos_data.h  spatial_array.h
devel/lib/pkgconfig/: schunk_description.pc  schunk_sdh.pc  sdh_grasp.pc
devel/lib/python2.7/dist-packages/sdh_grasp/msg/: __init__.py  _grasp_info.py  _pre_grasp_pos_data.py  _spatial_array.py
devel/lib/schunk_sdh/: dsa_only  schunk_sdh  sdh_only
devel/lib/sdh_grasp/: SDH_grip_interface  SDH_move_finger_interface  anglesc137  anglesc137.tmp_7ffcedbf87a8189f130  anglesc137.tmp_7ffd01e9add88733d1b  anglesc137.tmp_7ffd9d663b68399b2fe  anglesc137.tmp_7ffe527d0f0871895a4  c137  data  rosTime1  rosTime2  rosTime2.tmp_7fffa684f190b1fbfed5  rosTime2.tmp_7fffb98fd580468da4e5  sdh_grasp_control  sdh_grip_interface  sdh_move_finger_interface  sdh_read  sensorc137.tmp_7ffdc1e27470326fe268  sensorc137.tmp_7ffe9c753ae015de9f2c  slip  spatial  test_node2  test_node3  test_node4
devel/share/common-lisp/ros/sdh_grasp/msg/: _package.lisp  _package_grasp_info.lisp  _package_pre_grasp_pos_data.lisp  _package_spatial_array.lisp  grasp_info.lisp  pre_grasp_pos_data.lisp  sdh_grasp-msg.asd  spatial_array.lisp
devel/share/schunk_description/cmake/: schunk_descriptionConfig.cmake
devel/share/schunk_sdh/cmake/: schunk_sdh-msg-paths.cmake  schunk_sdhConfig.cmake
devel/share/sdh_grasp/cmake/: sdh_grasp-msg-extras.cmake  sdh_grasp-msg-paths.cmake  sdh_graspConfig.cmake
src/ramp_gripper/schunk_description/urdf/sdh/: sdh.urdf  sdh_mm.urdf.xacro
src/ramp_gripper/schunk_sdh/: CMakeLists.txt  package.xml
src/ramp_gripper/schunk_sdh/common/include/schunk_sdh/: dsa.h
src/ramp_gripper/schunk_sdh/launch/: sdh.launch
src/ramp_gripper/schunk_sdh/launch/config/: dsa.yaml  sdh.yaml
src/ramp_gripper/schunk_sdh/ros/src/: dsa_only.cpp  sdh.cpp  sdh_only.cpp
src/ramp_gripper/sdh_grasp/: CMakeLists.txt  CMakeLists.txt.user.0acd521  CMakeLists.txt.user.18
src/ramp_gripper/sdh_grasp/include/: callbacks.h  headers.h  helperFunctions.h
src/ramp_gripper/sdh_grasp/launch/: grasp_node.launch  read_node.launch  sdh_grasp.launch  spatial.launch
src/ramp_gripper/sdh_grasp/msg/: grasp_info.msg  pre_grasp_pos_data.msg  spatial_array.msg
src/ramp_gripper/sdh_grasp/src/: SDH_grip_interface.cpp  SDH_move_finger_interface.cpp  callbacks.h  data.cpp  headers.h  helperFunctions.h  sdh_grasp_control.cpp  sdh_grip_interface.cpp  sdh_move_finger_interface.cpp  sdh_read.cpp  slip.cpp  spatial.cpp  test_node2.cpp  test_node3.cpp  test_node4.cpp
src/ramp_gripper/sdh_grasp/src/header/: callbacks.h  headers.h  helperFunctions.h
